objects/NWQR_Picklist_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>Field APIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <inlineHelpText>This will be used in NWQR report</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>This is the picklist value from original field</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NWQR Picklist Mapping</label>
    <listViews>
        <fullName>Detailed_view</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>FieldApiName__c</columns>
        <columns>ObjectApiName__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed view</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>NWQR Picklists Mapping</pluralLabel>
</CustomObject>